--- a/haxr.cabal
+++ b/haxr.cabal
@@ -1,13 +1,12 @@
 Name: haxr
-Version: 3000.10.2
+Version: 3000.10.3
 Cabal-version: >=1.10
 Build-type: Simple
 Copyright: Bjorn Bringert, 2003-2006
 License: BSD3
 License-file: LICENSE
-Author: Bjorn Bringert <bjorn@bringert.net>
-Maintainer: Brent Yorgey <byorgey@gmail.com>
-Homepage: http://www.haskell.org/haskellwiki/HaXR
+Author: Bjorn Bringert <bjorn@bringert.net>, Nikolaos Bezirgiannis <bezirg@gmail.com>
+Maintainer: Nikolaos Bezirgiannis <bezirg@gmail.com>
 Category: Network
 Synopsis: XML-RPC client and server library.
 Description:
@@ -21,11 +20,10 @@ Extra-Source-Files:
         examples/raw_call.hs          examples/simple_client.hs     examples/simple_server.hs
         examples/test_client.hs       examples/test_server.hs       examples/time-xmlrpc-com.hs
         examples/validate.hs          examples/Makefile
-Bug-reports: https://github.com/byorgey/haxr/issues
 
 Source-repository head
   type:     git
-  location: git://github.com/byorgey/haxr.git
+  location: git://github.com/bezirg/haxr.git
 
 Library
   Build-depends: base < 5,
