Added constraint on mtl dep

--- a/haxr-browser.cabal
+++ b/haxr-browser.cabal
@@ -31,7 +31,8 @@ flag network-uri
 
 Library
   Build-depends: base < 5,
-                 mtl,
+                 -- added mtl constraint to make opennebula compile
+                 mtl<2.2, 
                  network < 2.7,
                  HaXml >= 1.22 && < 1.25,
                  HTTP >= 4000,
