Revert "Added constraint on mtl dep"
This reverts commit 27bff92d6356f89630b64e5c04332c2c7e78a93c.

--- a/haxr-browser.cabal
+++ b/haxr-browser.cabal
@@ -31,8 +31,7 @@ flag network-uri
 
 Library
   Build-depends: base < 5,
-                 -- added mtl constraint to make opennebula compile
-                 mtl<2.2, 
+                 mtl,
                  network < 2.7,
                  HaXml >= 1.22 && < 1.25,
                  HTTP >= 4000,
